[gd_scene load_steps=3 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://addons/gut/plugin_control.gd" type="Script" id=2]

[node name="Menu" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.4
anchor_right = 0.6
anchor_bottom = 0.35
text = "Metaheadron"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameButton" type="Button" parent="."]
anchor_left = 0.4
anchor_top = 0.4
anchor_right = 0.6
anchor_bottom = 0.45
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadGameButton" type="Button" parent="."]
anchor_left = 0.4
anchor_top = 0.5
anchor_right = 0.6
anchor_bottom = 0.55
text = "Load Game"

[node name="SettingsButton" type="Button" parent="."]
anchor_left = 0.4
anchor_top = 0.6
anchor_right = 0.6
anchor_bottom = 0.65
text = "Settings"

[node name="CreditsButton" type="Button" parent="."]
anchor_left = 0.4
anchor_top = 0.7
anchor_right = 0.6
anchor_bottom = 0.75
text = "Credits"

[node name="GutButton" type="Button" parent="."]
anchor_left = 0.4
anchor_top = 0.8
anchor_right = 0.6
anchor_bottom = 0.85
text = "Gut"

[node name="Gut" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 740, 250 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
_should_maximize = true
_should_print_to_console = false
_include_subdirectories = true
_directory1 = "res://tests"

[connection signal="pressed" from="NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="LoadGameButton" to="." method="_on_LoadGameButton_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="GutButton" to="." method="_on_GutButton_pressed"]
[connection signal="gut_ready" from="Gut" to="." method="_on_Gut_gut_ready"]
